--- a/cancelpredictor.ipynb
+++ b/cancelpredictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -10,6 +10,7 @@
    },
    "outputs": [],
    "source": [
+    "#importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -330,7 +331,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('C:/Users/TT129/Desktop/CancellationPredictor/bookings.csv')\n",
+    "#Reading the dataset\n",
+    "df = pd.read_csv('C:/Users/CancellationPredictor/bookings.csv')\n",
     "pd.set_option('display.max_columns',None)\n",
     "df.head()"
    ]
@@ -427,15 +429,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Wh3ugL7PSeMW"
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Please do check out below github link for Python code and Medium blog which got featured in Analytics Vidhya which helps in understanding Exploratory Data Analysis (EDA) performed on the data set : \n",
+    "\n",
+    "- https://github.com/ChaithanyaVamshi/HotelCancellationPredictor/blob/master/EDA.ipynb\n",
+    "- https://medium.com/analytics-vidhya/exploratory-data-analysis-eda-for-predicting-hotel-booking-cancellations-using-machine-learning-3990be4af2ff\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -444,13 +445,12 @@
     "id": "wTu8pHp6SeMY"
    },
    "source": [
-    "### In Data Analysis We will Analyze  Below:\n",
-    "1. Find all the Numerical Features\n",
-    "2. Find all the Categorical Features\n",
+    "####  In Data Analysis We will Analyze  Below:\n",
+    "1. Exploring Numerical Features\n",
+    "2. Exploring Categorical Features\n",
     "3. Handling Missing Values in the data set\n",
     "4. Encoding Categorical Variables\n",
-    "5. Outlier Treatment\n",
-    "6. Relationship between independent and dependent feature (Correlation Heat map)"
+    "5. Relationship between independent and dependent feature (Correlation Heat map)"
    ]
   },
   {
@@ -460,7 +460,7 @@
     "id": "q6RAZhWsSeMZ"
    },
    "source": [
-    "### 1. Exploring Numerical Features"
+    "#### 1. Exploring Numerical Features"
    ]
   },
   {
@@ -725,7 +725,7 @@
     "id": "c3IdwqkqSeMe"
    },
    "source": [
-    "### 2. Exploring Categorical Features"
+    "#### 2. Exploring Categorical Features"
    ]
   },
   {
@@ -921,7 +921,7 @@
     "id": "UBA166u5SeMk"
    },
    "source": [
-    "### 3. Handling Missing/Null Values in the data set"
+    "#### 3. Handling Missing/Null Values in the data set"
    ]
   },
   {
@@ -991,7 +991,7 @@
     "id": "aEfRmR3-SeMm"
    },
    "source": [
-    "### % of Missing Values in the Data set"
+    "#### Check % of Missing Values in the Data set"
    ]
   },
   {
@@ -1118,26 +1118,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "K9K8A8AASeMz"
-   },
-   "outputs": [],
-   "source": [
-    "#df1.corr()[\"is_canceled\"].sort_values(ascending=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "jGZeIDYMSeM1"
    },
    "source": [
-    "### 4. Feature Encoding (Encoding Categorical Variables)"
+    "#### 4. Feature Encoding (Encoding Categorical Variables)"
    ]
   },
   {
@@ -1383,6 +1370,7 @@
    },
    "outputs": [],
    "source": [
+    "#Custom mapping\n",
     "df1['hotel'] = df1['hotel'].map({'Resort Hotel':0, 'City Hotel':1})\n",
     "df1['arrival_date_month'] = df1['arrival_date_month'].map({'January':1, 'February': 2, 'March':3, 'April':4, 'May':5, 'June':6, 'July':7,\n",
     "                                                            'August':8, 'September':9, 'October':10, 'November':11, 'December':12})"
@@ -1398,6 +1386,7 @@
    },
    "outputs": [],
    "source": [
+    "#Replacing \"Undefined\" with \"SC\" as mentioned in data set description\n",
     "df1[\"meal\"].replace(\"Undefined\", \"SC\", inplace=True)"
    ]
   },
@@ -1411,6 +1400,7 @@
    },
    "outputs": [],
    "source": [
+    "#Applying label encoding for categorical features\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "le = LabelEncoder()\n",
     "df1['meal'] = le.fit_transform(df1['meal'])\n",
@@ -1731,7 +1721,6 @@
     }
    ],
    "source": [
-    "#df2 = pd.concat(df1,)\n",
     "df1.head()"
    ]
   },
@@ -1761,6 +1750,13 @@
    ],
    "source": [
     "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Relationship between independent and dependent feature (Correlation Heat map)"
    ]
   },
   {
@@ -1861,6 +1857,16 @@
    "source": [
     "plt.figure(figsize = (15,10))\n",
     "sns.heatmap(df1.corr(), cmap=\"YlGnBu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-  reservation_status seems to be most impactful feature and  because of its negative correlation with the is_canceled feature it can cause a wrong prediction or overfitting and there is chance of data leakage.Hence I will drop this feature.\n",
+    "- I will not use arrival_date_week_number, arrival_date_month, arrival_date_year,stays_in_week_nights, stays_in_weekend_nights since their importances are really low while predicting cancellations.\n",
+    "- reservation_status_date is date type data and it could not convert another type, this feature can also be dropped\n",
+    " "
    ]
   },
   {
@@ -2182,6 +2188,7 @@
    },
    "outputs": [],
    "source": [
+    "#Train and test split data\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state = 42,stratify = y,test_size = 0.30)"
    ]
@@ -2213,6 +2220,7 @@
     }
    ],
    "source": [
+    "#Checking if train and test data of target feature is equally distributed\n",
     "y_train.value_counts(normalize=True)"
    ]
   },
@@ -2615,6 +2623,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Applying Hyper Parameter Tuning using Grid SeachCV for all 4 alogorithms to check best score and best parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
@@ -2730,6 +2745,15 @@
     "clf = GridSearchCV(estimator= xgb, param_grid = param_grid, cv = 10, n_jobs=-1)\n",
     "best_clf = clf.fit(X_train,y_train)\n",
     "print('XGBOOST Best score: {} using best parameters {}'.format(best_clf.best_score_, best_clf.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Applying StratifiedKfold Cross Validation Technique on all 4 algorithms to know the exact mean CV accuracy score of the models\n",
+    "- Impute the best parameters obtained in hyper tuning tuning for respective alogorithms\n",
+    " "
    ]
   },
   {
@@ -2849,6 +2873,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plotting Dataframe to present the mean CV accuracy score of the Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
@@ -2932,6 +2963,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Applying Feature Selection to get the top 15 important features from the Random Forest Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
@@ -2977,6 +3015,7 @@
    },
    "outputs": [],
    "source": [
+    "#Since the size of the pickle file is more, I will compress the pickle file using BZ2 library**\n",
     "import bz2,pickle\n",
     "sfile = bz2.BZ2File('rfmodel_pickle.pkl','wb')\n",
     "pickle.dump(rf_model,sfile)\n",
@@ -3259,6 +3298,7 @@
    },
    "outputs": [],
    "source": [
+    "#Inorder to build the web app, I will use the 10 most important features that are helpful in predicting the cancelation from the guests since we it would be pain to front end user to fill all 23 features on he web app. I will drop the rest of features so we can build an interactive and user friendly web app.\n",
     "X = df3.drop(['is_canceled','hotel','arrival_date_day_of_month','adults','children','babies','meal','country','distribution_channel','is_repeated_guest',\n",
     "              'previous_bookings_not_canceled','reserved_room_type','agent','days_in_waiting_list'],axis = 1)\n",
     "y = df3['is_canceled']"
@@ -3274,6 +3314,7 @@
    },
    "outputs": [],
    "source": [
+    "#Train and test data again to check if there is any drop in accuracy of the model after eliminating features\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state = 42,stratify = y,test_size = 0.30)"
    ]
@@ -3658,6 +3699,7 @@
    },
    "outputs": [],
    "source": [
+    "# I will choose Random Forest Model since we have received highest accuracy earlier and apply hyper paramter tuning using GridsearchCV\n",
     "param_grid = {'n_estimators' : [10,100,200],'min_samples_split' : [1,2,5],\n",
     "              'min_samples_leaf': [1,2,5],'max_depth' : [5,8,15,25]}\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -3688,6 +3730,7 @@
     }
    ],
    "source": [
+    "#Impute the best hyperparameters obtained below and check the mean Cross validation score of the model\n",
     "from sklearn.model_selection import cross_val_score,StratifiedKFold\n",
     "skfold = StratifiedKFold(n_splits= 10,shuffle= True,random_state= 42)\n",
     "rf_cv_result = cross_val_score(RandomForestClassifier(max_depth = 25,min_samples_leaf= 1,\n",
@@ -3699,10 +3742,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "There is drop in 3% accuracy when compared to first Random Forest Model with 23 features."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Compresssing the pickle file which has 10 features to build web app\n",
     "import bz2,pickle\n",
     "file = bz2.BZ2File('modelfinal.pkl','wb')\n",
     "pickle.dump(rf_model,file)\n",
