--- a/cancelpredictor.ipynb
+++ b/cancelpredictor.ipynb
@@ -3746,7 +3746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "There is drop in 3% accuracy when compared to first Random Forest Model with 23 features."
+    "#There is drop in 3% accuracy when compared to first Random Forest Model with 23 features."
    ]
   },
   {
